exports[`Title should render 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontFamily": "Brandon Text_medium",
          "fontSize": 20,
          "fontWeight": "400"
        },
        undefined,
        Object {}
      ]
    ]
  }>
  Microscopic Hummingbirds
</Text>
`;

exports[`Title should support style overriding 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontFamily": "Brandon Text_medium",
          "fontSize": 20,
          "fontWeight": "400"
        },
        undefined,
        Object {
          "fontSize": 22
        }
      ]
    ]
  }>
  Microscopic Hummingbirds
</Text>
`;

exports[`Title should support theming 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontFamily": "Brandon Text_medium",
          "fontSize": 20,
          "fontWeight": "400"
        },
        Object {
          "color": "#eee"
        },
        Object {}
      ]
    ]
  }>
  Microscopic Hummingbirds
</Text>
`;
